fix: hiding website runs on solara didn't work on firefox

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
     justify-content: center;
 }
 
-div:has(> b):has(a){
+.v-application--wrap > div:nth-child(2) > div:nth-child(2){
     display: none !important;
 }
 
